Apply fixes for mobile layout issues

--- a/style.css
+++ b/style.css
@@ -9,17 +9,24 @@ body {
 }
 
 .fun-facts {
-
-    width: 40%;
-    height: 50%;
-    flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
+    gap:10px;
+    margin-bottom: 15px;
+    width: 75%;
     justify-content: space-evenly;
-
 
 }
 
+.fun-facts .text {
+    height: 38vh;
+}
+
+
+
 .container {
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     width: 80%;
@@ -53,8 +60,6 @@ body {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-
-
     gap: 10px;
 }
 
@@ -100,7 +105,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
     width: 100vw;
     background-color: #f0f0f0;
 
@@ -149,4 +153,20 @@ body {
 
 audio {
     align-self: flex-start;
+}
+
+@media only screen and (min-width: 900px) {
+
+    .container {
+        
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        gap:20px;
+        
+
+
+        
+    }
 }
